@@ -13,6 +13,9 @@ YYYY-MM-DD  John Doe  <johndoe@example.com>
 2011-08-05 Juan Gonzalez <juan.gonzalez@bsc.es>
 	* Fixed regressions in the implementation of MUSTER interface
 
+	* Fixed bug that prevented to compile 'SequenceScore' due to 
+	SeqAn type difinitions
+
 2011-08-04 Juan Gonzalez <juan.gonzalez@bsc.es>
 	* Fixed regressions in the implementation of 'libDistributedClustering'
 
